# SimDeck

./: AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  react-doctor.config.json
.codex/: local-environment.toml
.github/workflows/: ci.yml  release.yml  simdeck-provider.yml
cli/: DFPrivateSimulatorDisplayBridge.h  DFPrivateSimulatorDisplayBridge.m  XCWAccessibilityBridge.m  XCWChromeRenderer.h  XCWChromeRenderer.m  XCWH264Encoder.h  XCWH264Encoder.m  XCWPrivateSimulatorBooter.m  XCWPrivateSimulatorSession.h  XCWPrivateSimulatorSession.m  XCWSimctl.h  XCWSimctl.m
cli/native/: XCWNativeBridge.h  XCWNativeBridge.m  XCWNativeSession.h  XCWNativeSession.m
docs/: contributing.md  index.md
docs/.vitepress/: config.mts
docs/api/: health.md  rest.md
docs/cli/: commands.md  flags.md  index.md
docs/guide/: daemon.md  (+6 more)
inspector-agent/: PROTOCOL.md  Package.swift  README.md
nativescript-inspector/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: build-cli.sh  codex-run.mjs  codex-setup.mjs  codex-worktree-cache.mjs  github-actions.test.mjs  install-vscode-extension.mjs  package-vscode-extension.mjs  postinstall.mjs
server/: Cargo.toml  build.rs  native_stubs.c
server/src/: auth.rs  config.rs  devtools.rs  inspector.rs  logs.rs  main.rs  service.rs  webkit.rs
server/src/api/: routes.rs
server/src/metrics/: counters.rs
server/src/native/: bridge.rs  ffi.rs
server/src/simulators/: session.rs
server/src/transport/: webrtc.rs  webtransport.rs
vscode-extension/: LICENSE  README.md  extension.js  package.json
(+286 files in other folders)
