[package]
name = "xcode-canvas-web-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
http = "1.1"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.42", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wtransport = "0.7"

[build-dependencies]
cc = "1.2"
